tests/dag/type-conflict.fab
#
# RUN: %fab --format=null %s 2> %t.err || true
# RUN: %check %s -input-file %t.err
#

# CHECK: {{/.*}}.fab:{{.*}}error: expected string, got int
foo:string = 42;
